# SimpleExampleQt4

./: CMakeLists.txt  README.md  TestQt4.cxx  TestQt4.h  TestQt4.ui  myWidget.cxx  myWidget.h  myWidget2.cxx  myWidget2.h  widget.ui  widget2.ui
DerivedClass/: TestQt4.cxx  TestQt4.h  TestQt4.ui
InstantiateObject/: CMakeLists.txt  TestQt4_2.cxx  TestQt4_2.h  main.cxx
IntegrateWidget/: CMakeLists.txt  TestQt4.h  widget.ui  widget2.ui
